RESOLVED FIXED269214
AX: Missing _prepareAccessibilityCall in accessibilityIsInNonNativeTextControl
https://bugs.webkit.org/show_bug.cgi?id=269214
Summary AX: Missing _prepareAccessibilityCall in accessibilityIsInNonNativeTextControl
Joshua Hoffman
Reported 2024-02-12 11:28:07 PST
We need to call _prepareAccessibilityCall before trying to access self.axBackingObject in WebAccessibilityObjectWrapperIOS::accessibilityIsInNonNativeTextControl
Attachments
Patch (1.32 KB, patch)
2024-02-12 11:56 PST, Joshua Hoffman
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-12 11:28:17 PST
Joshua Hoffman
Comment 2 2024-02-12 11:28:26 PST
Joshua Hoffman
Comment 3 2024-02-12 11:56:57 PST
EWS
Comment 4 2024-02-12 15:48:07 PST
Committed 274497@main (58895edc47c1): <https://commits.webkit.org/274497@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469836 [details].
Note You need to log in before you can comment on or make changes to this bug.