AX: Missing _prepareAccessibilityCall in accessibilityIsInNonNativeTextControl https://bugs.webkit.org/show_bug.cgi?id=269214 rdar://122778867

Reviewed by Andres Gonzalez.

We need to add a _prepareAccessibilityCall to avoid a nullptr dereference.

* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityIsInNonNativeTextControl]):

Canonical link: https://commits.webkit.org/274497@main